# aibot_health

./: .gitignore  .gitmodules  README.md  core_logic.md  main.py  pyproject.toml
data1/: basic_settings.yaml  kb_settings.yaml  model_settings.yaml  prompt_settings.yaml
data1/data/knowledge_base/: info.db
data1/data/knowledge_base/health clinic/content/: core_service.json  membership_rules.json  product.json
data1/data/knowledge_base/samples/vector_store/text-embedding-v2/: index.pkl
data1/filted_data/: 1.md  prompt_step1.md  prompt_step2.md
data1/json_data/: health_solutions.json  org_info.json
scripts/: package_data1_bundle.py  sync_folder.sh
tests/: conftest.py  kb_chat_reporting.py  kb_chat_request.yaml  log_relevance_extractor.py  test_kb_chat.py  test_log_relevance_extractor.py  test_migration_logic.py  test_vector_matching.py  test_vector_similarity.py
